crystfeldir = $(docdir)
crystfel_DATA = geometry.txt indexamajig.txt pattern_sim.txt process_hkl.txt \
                symmetry.txt twin-calculator.pdf 0-INDEX
EXTRA_DIST = geometry.txt indexamajig.txt pattern_sim.txt process_hkl.txt \
                symmetry.txt twin-calculator.pdf 0-INDEX \
                examples/lcls-dec.geom examples/lcls-june-r0013-r0128.geom \
                examples/lcls-xpp-estimate.geom examples/simple.geom
